# hermes-m365

./: .env.example  .gitignore  AGENTS.md  README.md  __init__.py  adapter.py  attachments.py  config.py  graph.py  mail_tools.py  plugin.yaml  pyproject.toml  sanitize.py  summary_llm.py  summary_schema.py
m365_email_hermes/: __init__.py  attachments.py  config.py  graph.py  mail_tools.py  state.py
schema/: general.json  general_raw.json  newsletter.json  newsletter_raw.json
tests/: __init__.py  conftest.py  test_adapter.py  test_attachments.py  test_config.py  test_graph_auth.py  test_graph_regressions.py  test_live_smoke.py  test_mail_tools.py  test_plugin_registration.py  test_policy_matrix_regressions.py  test_sanitize.py  test_scaffold.py  test_summary_llm.py  test_summary_schema.py
